--- a/test-grid.html
+++ b/test-grid.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Professional Grid</title>
+  <title>3D Cube Grid</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
     :root {
-      --bg-color: #0f172a;        /* Slate-900 */
-      --tile-color: #1e293b;      /* Slate-800 */
-      --tile-hover: #334155;      /* Slate-700 */
-      --text-color: #e5e7eb;      /* Gray-200 */
-      --accent: #38bdf8;          /* Sky-400 */
+      --bg: #020617;
+      --tile: #1e293b;
+      --tile-edge: #0f172a;
+      --accent: #38bdf8;
+      --text: #e5e7eb;
     }
 
     * {
@@ -21,89 +21,116 @@
 
     body {
       margin: 0;
-      min-height: 100vh;
-      background: radial-gradient(circle at top, #020617, var(--bg-color));
+      height: 100vh;
+      background: radial-gradient(circle at top, #020617, #020617);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: var(--text-color);
+      color: var(--text);
     }
 
-    .grid {
+    /* Scene gives us perspective */
+    .scene {
+      perspective: 1000px;
+    }
+
+    /* Cube container */
+    .cube {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      width: min(90vw, 600px);
+      gap: 16px;
+      width: 420px;
+      transform-style: preserve-3d;
+      transform: rotateX(15deg) rotateY(-20deg);
+      transition: transform 0.4s ease;
     }
 
+    .scene:hover .cube {
+      transform: rotateX(15deg) rotateY(-20deg) scale(1.15);
+    }
+
+    /* Individual tiles */
     .tile {
       position: relative;
-      background: linear-gradient(145deg, var(--tile-hover), var(--tile-color));
-      border-radius: 16px;
       aspect-ratio: 1 / 1;
+      background: linear-gradient(145deg, #334155, var(--tile));
+      border-radius: 14px;
       text-decoration: none;
-      color: var(--text-color);
+      color: var(--text);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.1rem;
       font-weight: 500;
       letter-spacing: 0.3px;
 
+      transform-style: preserve-3d;
+      transform: translateZ(0);
       transition:
-        transform 0.25s ease,
-        box-shadow 0.25s ease,
-        background 0.25s ease;
+        transform 0.3s ease,
+        box-shadow 0.3s ease,
+        background 0.3s ease;
+    }
+
+    /* Cube depth illusion */
+    .tile::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      border-radius: 14px;
+      background: var(--tile-edge);
+      transform: translateZ(-18px);
     }
 
     .tile::after {
       content: "";
       position: absolute;
       inset: 0;
-      border-radius: 16px;
+      border-radius: 14px;
       border: 1px solid rgba(255, 255, 255, 0.06);
       pointer-events: none;
     }
 
+    /* Tile hover lifts forward */
     .tile:hover {
-      transform: scale(1.12);
-      background: linear-gradient(145deg, var(--accent), var(--tile-hover));
+      transform: translateZ(40px);
+      background: linear-gradient(145deg, var(--accent), #0284c7);
       box-shadow:
-        0 20px 40px rgba(0, 0, 0, 0.4),
-        0 0 0 1px rgba(56, 189, 248, 0.4);
-      z-index: 10;
+        0 25px 45px rgba(0, 0, 0, 0.45),
+        0 0 0 1px rgba(56, 189, 248, 0.5);
+      z-index: 5;
     }
 
     .tile span {
+      position: relative;
+      z-index: 1;
       text-align: center;
-      padding: 10px;
+      padding: 8px;
     }
 
-    @media (max-width: 500px) {
-      .grid {
-        gap: 14px;
-      }
-
-      .tile {
-        font-size: 1rem;
+    @media (max-width: 600px) {
+      .cube {
+        width: 300px;
+        gap: 12px;
       }
     }
   </style>
 </head>
 
 <body>
-  <div class="grid">
-    <a class="tile" href="page1.html"><span>Page One</span></a>
-    <a class="tile" href="page2.html"><span>Page Two</span></a>
-    <a class="tile" href="page3.html"><span>Page Three</span></a>
+  <div class="scene">
+    <div class="cube">
+      <a class="tile" href="page1.html"><span>Page One</span></a>
+      <a class="tile" href="page2.html"><span>Page Two</span></a>
+      <a class="tile" href="page3.html"><span>Page Three</span></a>
 
-    <a class="tile" href="page4.html"><span>Page Four</span></a>
-    <a class="tile" href="page5.html"><span>Page Five</span></a>
-    <a class="tile" href="page6.html"><span>Page Six</span></a>
+      <a class="tile" href="page4.html"><span>Page Four</span></a>
+      <a class="tile" href="page5.html"><span>Page Five</span></a>
+      <a class="tile" href="page6.html"><span>Page Six</span></a>
 
-    <a class="tile" href="page7.html"><span>Page Seven</span></a>
-    <a class="tile" href="page8.html"><span>Page Eight</span></a>
-    <a class="tile" href="page9.html"><span>Page Nine</span></a>
+      <a class="tile" href="page7.html"><span>Page Seven</span></a>
+      <a class="tile" href="page8.html"><span>Page Eight</span></a>
+      <a class="tile" href="page9.html"><span>Page Nine</span></a>
+    </div>
   </div>
 </body>
 </html>
