--- a/test-grid.html
+++ b/test-grid.html
@@ -6,16 +6,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
+    /* -----------------------------
+       THEME TOKENS
+    ----------------------------- */
+
     :root {
-      --bg: #020617;
+      --transition-fast: 0.25s ease;
+    }
+
+    [data-theme="light"] {
+      --bg-main: #e8edf3;
+      --bg-grad: #f5f7fa;
+
+      --panel: #ffffff;
+      --panel-hi: #f1f5f9;
+      --edge: #d1d9e6;
+
+      --accent: #3b82f6;
+      --accent-soft: rgba(59, 130, 246, 0.25);
+
+      --text-main: #0f172a;
+      --text-muted: #475569;
+    }
+
+    [data-theme="dark"] {
+      --bg-main: #020617;
+      --bg-grad: #0b1220;
+
       --panel: #0f172a;
       --panel-hi: #1e293b;
       --edge: #020617;
+
       --accent: #38bdf8;
       --accent-soft: rgba(56, 189, 248, 0.35);
-      --text: #e5e7eb;
-      --muted: #94a3b8;
+
+      --text-main: #e5e7eb;
+      --text-muted: #94a3b8;
     }
+
+    /* -----------------------------
+       BASE STYLES
+    ----------------------------- */
 
     * {
       box-sizing: border-box;
@@ -26,74 +57,110 @@
       margin: 0;
       height: 100vh;
       background:
-        radial-gradient(1200px 600px at top, #020617, var(--bg)),
-        linear-gradient(180deg, #020617, #020617);
+        radial-gradient(1200px 600px at top, var(--bg-grad), var(--bg-main));
       display: flex;
       align-items: center;
       justify-content: center;
-      color: var(--text);
+      color: var(--text-main);
+      transition:
+        background var(--transition-fast),
+        color var(--transition-fast);
     }
 
-    /* Perspective environment */
+    /* -----------------------------
+       THEME TOGGLE
+    ----------------------------- */
+
+    .theme-toggle {
+      position: fixed;
+      top: 18px;
+      right: 18px;
+      width: 42px;
+      height: 42px;
+      border-radius: 50%;
+      border: none;
+      background: var(--panel);
+      box-shadow:
+        0 6px 14px rgba(0, 0, 0, 0.15);
+      cursor: pointer;
+      display: grid;
+      place-items: center;
+      transition:
+        background var(--transition-fast),
+        box-shadow var(--transition-fast),
+        transform var(--transition-fast);
+    }
+
+    .theme-toggle:hover {
+      transform: translateY(-2px);
+    }
+
+    .theme-toggle svg {
+      width: 20px;
+      height: 20px;
+      fill: var(--text-main);
+      transition: fill var(--transition-fast);
+    }
+
+    /* -----------------------------
+       3D SCENE
+    ----------------------------- */
+
     .scene {
       perspective: 1400px;
     }
 
-    /* Cube face */
     .cube {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 18px;
       width: 460px;
       transform-style: preserve-3d;
-      transform:
-        rotateX(18deg)
-        rotateY(-28deg);
-      transition:
-        transform 0.6s cubic-bezier(.2,.8,.2,1);
+      transform: rotateX(16deg) rotateY(-26deg);
+      transition: transform 0.6s cubic-bezier(.2,.8,.2,1);
     }
 
     .scene:hover .cube {
-      transform:
-        rotateX(22deg)
-        rotateY(-32deg)
-        scale(1.18);
+      transform: rotateX(20deg) rotateY(-30deg) scale(1.15);
     }
 
-    /* Tiles */
+    /* -----------------------------
+       TILES
+    ----------------------------- */
+
     .tile {
       position: relative;
       aspect-ratio: 1 / 1;
       border-radius: 18px;
       text-decoration: none;
-      color: var(--text);
+      color: var(--text-main);
       display: flex;
       align-items: center;
       justify-content: center;
       font-weight: 500;
-      letter-spacing: 0.4px;
+      letter-spacing: 0.3px;
       background:
         linear-gradient(145deg, var(--panel-hi), var(--panel));
-      backdrop-filter: blur(6px);
+      box-shadow:
+        0 8px 18px rgba(0, 0, 0, 0.12);
 
       transform-style: preserve-3d;
       transition:
         transform 0.35s cubic-bezier(.2,.8,.2,1),
         box-shadow 0.35s cubic-bezier(.2,.8,.2,1),
-        background 0.35s ease;
+        background 0.35s ease,
+        color var(--transition-fast);
     }
 
-    /* Depth body */
     .tile::before {
       content: "";
       position: absolute;
       inset: 0;
       border-radius: 18px;
-      background: linear-gradient(180deg, var(--edge), #000);
-      transform: translateZ(-22px);
+      background: linear-gradient(180deg, var(--edge), var(--panel));
+      transform: translateZ(-20px);
     }
 
-    /* Specular highlight */
     .tile::after {
       content: "";
       position: absolute;
@@ -103,7 +170,7 @@
         linear-gradient(
           120deg,
           transparent 30%,
-          rgba(255,255,255,0.08) 45%,
+          rgba(255, 255, 255, 0.35) 45%,
           transparent 60%
         );
       opacity: 0;
@@ -111,19 +178,19 @@
       pointer-events: none;
     }
 
-    /* Subtle depth variation across grid */
-    .tile:nth-child(5) { transform: translateZ(18px); }
+    .tile:nth-child(5) { transform: translateZ(16px); }
     .tile:nth-child(2),
     .tile:nth-child(4),
     .tile:nth-child(6),
     .tile:nth-child(8) { transform: translateZ(8px); }
 
     .tile:hover {
-      transform: translateZ(48px);
+      transform: translateZ(44px);
       background:
-        linear-gradient(145deg, var(--accent), #0284c7);
+        linear-gradient(145deg, var(--accent), #60a5fa);
+      color: #ffffff;
       box-shadow:
-        0 40px 70px rgba(0, 0, 0, 0.55),
+        0 30px 60px rgba(0, 0, 0, 0.35),
         0 0 0 1px var(--accent-soft);
       z-index: 10;
     }
@@ -135,19 +202,21 @@
     .tile span {
       position: relative;
       z-index: 1;
-      text-align: center;
       padding: 10px;
+      text-align: center;
     }
 
-    /* Subtle ambient shadow beneath cube */
+    /* Ambient shadow */
     .shadow {
       position: absolute;
       width: 420px;
-      height: 60px;
-      background: radial-gradient(ellipse at center, rgba(0,0,0,0.6), transparent);
-      filter: blur(18px);
+      height: 70px;
+      background:
+        radial-gradient(ellipse at center, rgba(0,0,0,0.25), transparent);
+      filter: blur(20px);
       transform: translateY(260px);
       z-index: -1;
+      transition: background var(--transition-fast);
     }
 
     @media (max-width: 600px) {
@@ -165,6 +234,14 @@
 </head>
 
 <body>
+  <!-- Theme Toggle -->
+  <button class="theme-toggle" aria-label="Toggle theme">
+    <svg viewBox="0 0 24 24">
+      <path d="M12 3a1 1 0 0 1 1 1v1a1 1 0 0 1-2 0V4a1 1 0 0 1 1-1zm0 14a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm8-5a1 1 0 0 1-1 1h-1a1 1 0 0 1 0-2h1a1 1 0 0 1 1 1zM6 12a1 1 0 0 1-1 1H4a1 1 0 0 1 0-2h1a1 1 0 0 1 1 1zm11.66 5.66a1 1 0 0 1-1.41 0l-.71-.71a1 1 0 1 1 1.41-1.41l.71.71a1 1 0 0 1 0 1.41zM7.46 8.46a1 1 0 0 1-1.41 0l-.71-.71a1 1 0 1 1 1.41-1.41l.71.71a1 1 0 0 1 0 1.41zm10.2-1.41a1 1 0 0 1 0 1.41l-.71.71a1 1 0 0 1-1.41-1.41l.71-.71a1 1 0 0 1 1.41 0zM8.17 17.24a1 1 0 0 1 0 1.41l-.71.71a1 1 0 1 1-1.41-1.41l.71-.71a1 1 0 0 1 1.41 0z"/>
+    </svg>
+  </button>
+
+  <!-- Scene -->
   <div class="scene">
     <div class="cube">
       <a class="tile" href="page1.html"><span>Platform</span></a>
@@ -181,5 +258,23 @@
     </div>
     <div class="shadow"></div>
   </div>
+
+  <script>
+    const root = document.documentElement;
+    const toggle = document.querySelector(".theme-toggle");
+
+    const storedTheme = localStorage.getItem("theme");
+    const systemPrefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+
+    const initialTheme = storedTheme || (systemPrefersDark ? "dark" : "light");
+    root.setAttribute("data-theme", initialTheme);
+
+    toggle.addEventListener("click", () => {
+      const current = root.getAttribute("data-theme");
+      const next = current === "dark" ? "light" : "dark";
+      root.setAttribute("data-theme", next);
+      localStorage.setItem("theme", next);
+    });
+  </script>
 </body>
 </html>
