--- a/test-grid.html
+++ b/test-grid.html
@@ -6,10 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
-    /* -----------------------------
-       THEME TOKENS
-    ----------------------------- */
-
     :root {
       --transition-fast: 0.25s ease;
     }
@@ -19,14 +15,18 @@
       --bg-grad: #f5f7fa;
 
       --panel: #ffffff;
-      --panel-hi: #f1f5f9;
-      --edge: #d1d9e6;
+      --panel-hi: #f3f6fa;
+      --edge: #d6deea;
+
+      --light-direction: linear-gradient(145deg, #ffffff, #e9eef5);
 
       --accent: #3b82f6;
       --accent-soft: rgba(59, 130, 246, 0.25);
 
       --text-main: #0f172a;
       --text-muted: #475569;
+
+      --shadow-color: rgba(0, 0, 0, 0.22);
     }
 
     [data-theme="dark"] {
@@ -37,16 +37,16 @@
       --panel-hi: #1e293b;
       --edge: #020617;
 
+      --light-direction: linear-gradient(145deg, #1e293b, #020617);
+
       --accent: #38bdf8;
       --accent-soft: rgba(56, 189, 248, 0.35);
 
       --text-main: #e5e7eb;
       --text-muted: #94a3b8;
-    }
 
-    /* -----------------------------
-       BASE STYLES
-    ----------------------------- */
+      --shadow-color: rgba(0, 0, 0, 0.55);
+    }
 
     * {
       box-sizing: border-box;
@@ -56,56 +56,83 @@
     body {
       margin: 0;
       height: 100vh;
-      background:
-        radial-gradient(1200px 600px at top, var(--bg-grad), var(--bg-main));
+      background: radial-gradient(1200px 600px at top, var(--bg-grad), var(--bg-main));
       display: flex;
       align-items: center;
       justify-content: center;
       color: var(--text-main);
-      transition:
-        background var(--transition-fast),
-        color var(--transition-fast);
+      transition: background var(--transition-fast), color var(--transition-fast);
     }
 
-    /* -----------------------------
-       THEME TOGGLE
-    ----------------------------- */
-
-    .theme-toggle {
+    /* Controls */
+    .theme-toggle,
+    .lang-toggle {
       position: fixed;
       top: 18px;
+      background: var(--panel);
+      border: none;
+      box-shadow: 0 6px 14px rgba(0,0,0,0.15);
+      cursor: pointer;
+    }
+
+    .theme-toggle {
       right: 18px;
       width: 42px;
       height: 42px;
       border-radius: 50%;
-      border: none;
-      background: var(--panel);
-      box-shadow:
-        0 6px 14px rgba(0, 0, 0, 0.15);
-      cursor: pointer;
       display: grid;
       place-items: center;
-      transition:
-        background var(--transition-fast),
-        box-shadow var(--transition-fast),
-        transform var(--transition-fast);
     }
 
-    .theme-toggle:hover {
-      transform: translateY(-2px);
+    .lang-toggle {
+      right: 72px;
+      padding: 6px 12px;
+      border-radius: 20px;
+      font-size: 0.8rem;
+      font-weight: 500;
+      color: var(--text-muted);
     }
 
-    .theme-toggle svg {
-      width: 20px;
-      height: 20px;
+    .lang-toggle span.active {
+      color: var(--text-main);
+    }
+
+    /* Theme icon */
+    .theme-icon {
+      width: 22px;
+      height: 22px;
+      stroke: var(--text-main);
+      fill: none;
+      stroke-width: 2;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+      transition: transform 0.6s cubic-bezier(.2,.8,.2,1);
+    }
+
+    .rays {
+      transition: opacity 0.4s ease, transform 0.6s cubic-bezier(.2,.8,.2,1);
+      transform-origin: center;
+    }
+
+    .core {
       fill: var(--text-main);
-      transition: fill var(--transition-fast);
+      transition: d 0.6s cubic-bezier(.2,.8,.2,1);
     }
 
-    /* -----------------------------
-       3D SCENE
-    ----------------------------- */
+    [data-theme="dark"] .theme-icon {
+      transform: rotate(-40deg);
+    }
 
+    [data-theme="dark"] .rays {
+      opacity: 0;
+      transform: rotate(-90deg) scale(0.5);
+    }
+
+    [data-theme="dark"] .core {
+      d: path("M15 12a6 6 0 1 1-6-6a4.5 4.5 0 0 0 6 6z");
+    }
+
+    /* Cube */
     .scene {
       perspective: 1400px;
     }
@@ -124,10 +151,6 @@
       transform: rotateX(20deg) rotateY(-30deg) scale(1.15);
     }
 
-    /* -----------------------------
-       TILES
-    ----------------------------- */
-
     .tile {
       position: relative;
       aspect-ratio: 1 / 1;
@@ -137,19 +160,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-weight: 500;
-      letter-spacing: 0.3px;
-      background:
-        linear-gradient(145deg, var(--panel-hi), var(--panel));
-      box-shadow:
-        0 8px 18px rgba(0, 0, 0, 0.12);
-
+      background: var(--light-direction);
+      box-shadow: 0 8px 18px rgba(0,0,0,0.12);
       transform-style: preserve-3d;
-      transition:
-        transform 0.35s cubic-bezier(.2,.8,.2,1),
-        box-shadow 0.35s cubic-bezier(.2,.8,.2,1),
-        background 0.35s ease,
-        color var(--transition-fast);
+      transition: transform 0.35s cubic-bezier(.2,.8,.2,1);
     }
 
     .tile::before {
@@ -161,23 +175,6 @@
       transform: translateZ(-20px);
     }
 
-    .tile::after {
-      content: "";
-      position: absolute;
-      inset: 1px;
-      border-radius: 17px;
-      background:
-        linear-gradient(
-          120deg,
-          transparent 30%,
-          rgba(255, 255, 255, 0.35) 45%,
-          transparent 60%
-        );
-      opacity: 0;
-      transition: opacity 0.3s ease;
-      pointer-events: none;
-    }
-
     .tile:nth-child(5) { transform: translateZ(16px); }
     .tile:nth-child(2),
     .tile:nth-child(4),
@@ -186,95 +183,92 @@
 
     .tile:hover {
       transform: translateZ(44px);
-      background:
-        linear-gradient(145deg, var(--accent), #60a5fa);
-      color: #ffffff;
-      box-shadow:
-        0 30px 60px rgba(0, 0, 0, 0.35),
-        0 0 0 1px var(--accent-soft);
-      z-index: 10;
+      background: linear-gradient(145deg, var(--accent), #60a5fa);
+      color: #fff;
+      z-index: 5;
     }
 
-    .tile:hover::after {
-      opacity: 1;
-    }
-
-    .tile span {
-      position: relative;
-      z-index: 1;
-      padding: 10px;
-      text-align: center;
-    }
-
-    /* Ambient shadow */
     .shadow {
       position: absolute;
       width: 420px;
       height: 70px;
-      background:
-        radial-gradient(ellipse at center, rgba(0,0,0,0.25), transparent);
+      background: radial-gradient(ellipse at center, var(--shadow-color), transparent);
       filter: blur(20px);
       transform: translateY(260px);
       z-index: -1;
-      transition: background var(--transition-fast);
     }
 
-    @media (max-width: 600px) {
-      .cube {
-        width: 320px;
-        gap: 14px;
+    /* Reduced motion */
+    @media (prefers-reduced-motion: reduce) {
+      * {
+        transition: none !important;
       }
-
-      .shadow {
-        width: 300px;
-        transform: translateY(200px);
+      .cube,
+      .tile {
+        transform: none !important;
       }
     }
   </style>
 </head>
 
 <body>
-  <!-- Theme Toggle -->
-  <button class="theme-toggle" aria-label="Toggle theme">
-    <svg viewBox="0 0 24 24">
-      <path d="M12 3a1 1 0 0 1 1 1v1a1 1 0 0 1-2 0V4a1 1 0 0 1 1-1zm0 14a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm8-5a1 1 0 0 1-1 1h-1a1 1 0 0 1 0-2h1a1 1 0 0 1 1 1zM6 12a1 1 0 0 1-1 1H4a1 1 0 0 1 0-2h1a1 1 0 0 1 1 1zm11.66 5.66a1 1 0 0 1-1.41 0l-.71-.71a1 1 0 1 1 1.41-1.41l.71.71a1 1 0 0 1 0 1.41zM7.46 8.46a1 1 0 0 1-1.41 0l-.71-.71a1 1 0 1 1 1.41-1.41l.71.71a1 1 0 0 1 0 1.41zm10.2-1.41a1 1 0 0 1 0 1.41l-.71.71a1 1 0 0 1-1.41-1.41l.71-.71a1 1 0 0 1 1.41 0zM8.17 17.24a1 1 0 0 1 0 1.41l-.71.71a1 1 0 1 1-1.41-1.41l.71-.71a1 1 0 0 1 1.41 0z"/>
+  <button class="lang-toggle"><span data-lang="en">EN</span> / <span data-lang="pl">PL</span></button>
+
+  <button class="theme-toggle">
+    <svg viewBox="0 0 24 24" class="theme-icon">
+      <g class="rays">
+        <line x1="12" y1="1" x2="12" y2="4"/>
+        <line x1="12" y1="20" x2="12" y2="23"/>
+        <line x1="1" y1="12" x2="4" y2="12"/>
+        <line x1="20" y1="12" x2="23" y2="12"/>
+      </g>
+      <path class="core" d="M12 7a5 5 0 1 0 0 10a5 5 0 1 0 0-10z"/>
     </svg>
   </button>
 
-  <!-- Scene -->
   <div class="scene">
     <div class="cube">
-      <a class="tile" href="page1.html"><span>Platform</span></a>
-      <a class="tile" href="page2.html"><span>Architecture</span></a>
-      <a class="tile" href="page3.html"><span>Security</span></a>
-
-      <a class="tile" href="page4.html"><span>Automation</span></a>
-      <a class="tile" href="page5.html"><span>Overview</span></a>
-      <a class="tile" href="page6.html"><span>Observability</span></a>
-
-      <a class="tile" href="page7.html"><span>Cloud</span></a>
-      <a class="tile" href="page8.html"><span>Reliability</span></a>
-      <a class="tile" href="page9.html"><span>Insights</span></a>
+      <a class="tile" href="page1.html"><span data-en="Platform" data-pl="Platforma"></span></a>
+      <a class="tile" href="page2.html"><span data-en="Architecture" data-pl="Architektura"></span></a>
+      <a class="tile" href="page3.html"><span data-en="Security" data-pl="Bezpieczeństwo"></span></a>
+      <a class="tile" href="page4.html"><span data-en="Automation" data-pl="Automatyzacja"></span></a>
+      <a class="tile" href="page5.html"><span data-en="Overview" data-pl="Przegląd"></span></a>
+      <a class="tile" href="page6.html"><span data-en="Observability" data-pl="Obserwowalność"></span></a>
+      <a class="tile" href="page7.html"><span data-en="Cloud" data-pl="Chmura"></span></a>
+      <a class="tile" href="page8.html"><span data-en="Reliability" data-pl="Niezawodność"></span></a>
+      <a class="tile" href="page9.html"><span data-en="Insights" data-pl="Wnioski"></span></a>
     </div>
     <div class="shadow"></div>
   </div>
 
   <script>
     const root = document.documentElement;
-    const toggle = document.querySelector(".theme-toggle");
+    const themeToggle = document.querySelector(".theme-toggle");
+    const langToggle = document.querySelector(".lang-toggle");
+    const labels = document.querySelectorAll("[data-en]");
 
-    const storedTheme = localStorage.getItem("theme");
-    const systemPrefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+    const theme = localStorage.getItem("theme")
+      || (matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light");
+    root.dataset.theme = theme;
 
-    const initialTheme = storedTheme || (systemPrefersDark ? "dark" : "light");
-    root.setAttribute("data-theme", initialTheme);
+    themeToggle.onclick = () => {
+      root.dataset.theme = root.dataset.theme === "dark" ? "light" : "dark";
+      localStorage.setItem("theme", root.dataset.theme);
+    };
 
-    toggle.addEventListener("click", () => {
-      const current = root.getAttribute("data-theme");
-      const next = current === "dark" ? "light" : "dark";
-      root.setAttribute("data-theme", next);
-      localStorage.setItem("theme", next);
-    });
+    function setLang(lang) {
+      labels.forEach(el => el.textContent = el.dataset[lang]);
+      document.querySelectorAll(".lang-toggle span")
+        .forEach(s => s.classList.toggle("active", s.dataset.lang === lang));
+      localStorage.setItem("lang", lang);
+    }
+
+    const lang = localStorage.getItem("lang") || "en";
+    setLang(lang);
+
+    langToggle.onclick = () => {
+      setLang(localStorage.getItem("lang") === "en" ? "pl" : "en");
+    };
   </script>
 </body>
 </html>
